appId: host.exp.Exponent
---
- tapOn: "e-mail"
- inputText: "alex@amadoo.io"
- tapOn: "password"
- inputText: "test1234"
- tapOn: "Next"
- extendedWaitUntil:
    notVisible: "Next"
    timeout: 25000
- tapOn:
    text: "Allow"
    optional: true
- tapOn:
    text: "Don't Allow"
    optional: true
- tapOn:
    text: "Not Now"
    optional: true
